<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_activity_new_set"
            android:id="@+id/textViewtitlenewset"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            style="@style/Base.TextAppearance.AppCompat.Title" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        card_view:theme="@style/CardView"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="2dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/title"
                android:ems="10"
                android:id="@+id/editTextNewTitle"
                android:layout_toRightOf="@+id/imageViewSetIconPreview"
                android:layout_toEndOf="@+id/imageViewSetIconPreview"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="@string/description"
                android:ems="10"
                android:id="@+id/editTextNewDescription"
                android:layout_toRightOf="@+id/imageViewSetIconPreview"
                android:layout_toEndOf="@+id/imageViewSetIconPreview"
                android:layout_below="@+id/editTextNewTitle"
                android:textSize="14sp" />
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageViewSetIconPreview"
                android:paddingTop="6dp"
                android:adjustViewBounds="false"
                android:src="@drawable/ik_0_0"
                android:layout_centerVertical="true"
                />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>