<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fitsSystemWindows="true"
        tools:context="com.humbleai.humblenotes.SingleItemActivity">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeview">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:maxHeight="300dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageViewImage"
                    android:adjustViewBounds="true"
                    android:visibility="gone" />
                <EditText
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="4"
                    android:autoLink="all"
                    android:linksClickable="false"
                    android:gravity="start"
                    android:hint="@string/item_title"
                    android:textColor="@color/color_NoteText"
                    android:textSize="16sp"
                    android:background="@android:color/transparent"
                    android:layout_below="@+id/imageViewImage" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRemoveImage"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:text="@string/removeimage"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAdd"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:text="@string/ok"
                android:layout_below="@+id/edittext"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/buttonChangeColor"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_color_lens_24dp"
                android:layout_below="@+id/edittext"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/buttonAddImage"
                android:src="@drawable/ic_photo_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_below="@+id/edittext"
                android:layout_toRightOf="@+id/buttonChangeColor" />
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/buttonAddDateTime"
                android:src="@drawable/ic_today_24dp"
                android:layout_below="@+id/edittext"
                android:layout_toRightOf="@+id/buttonAddImage"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />



        </RelativeLayout>
    </ScrollView>
